--- a/carbon.config.json
+++ b/carbon.config.json
@@ -2,7 +2,7 @@
   "name": "create-splashing",
   "version": "1.0.0",
   "author": "Malezja",
-  "minecraftVersion": "1.19.2",
+  "minecraftVersion": ["1.19.2"],
   "description": "Package that adds create splashing recipes. Requires `KubeJS Create`.",
   "modloaders": ["forge", "fabric"]
 }
